--- a/catalog.html
+++ b/catalog.html
@@ -118,7 +118,7 @@
             <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
           </p>
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__star sorted-hotel__star--five"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <span class="sorted-hotel__star sorted-hotel__star--five">5 звёзд</span> <!-- звёздочки рейтинга img/svg/star.svg -->
             <p class="sorted-hotel__text">Рейтинг: 8,5</p>
           </div>
         </article>
@@ -135,7 +135,7 @@
             <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
           </p>
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__star sorted-hotel__star--three"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <span class="sorted-hotel__star sorted-hotel__star--three">3 звезды</span> <!-- звёздочки рейтинга img/svg/star.svg -->
             <p class="sorted-hotel__text">Рейтинг: 8,9</p>
           </div>
         </article>
@@ -152,7 +152,7 @@
             <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
           </p>
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__star sorted-hotel__star--two"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <span class="sorted-hotel__star sorted-hotel__star--two">2 звезды</span> <!-- звёздочки рейтинга img/svg/star.svg -->
             <p class="sorted-hotel__text">Рейтинг: 9,2</p>
           </div>
         </article>
