--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
 
           <li class="features__item">
-            <h3 class="features__subheader">Там есть мост дьявола</h3>
+            <h3 class="features__subheader">Там есть мост&nbsp;дьявола</h3>
             <span class="features__number">№2</span>
             <p class="features__description" tabindex="0">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             <img class="features__foto" src="img/feature-2.jpg" width="800" height="256" alt="Фотография моста дьявола">
