--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Информация</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Фото и видео</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Карта штата</a></li>
-          <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Гостиницы</a></li>
+          <li class="page-header__menu-item"><a class="page-header__menu-link" href="/catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
@@ -36,9 +36,7 @@
       </section>
 
       <section class="features">
-        <h2 class="visually-hidden" tabindex="0">Преимущества городка Седона</h2>
-
-        <p class="features__text features__text--big">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <h2 class="features__header">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="features__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 
         <ol class="features__list">
@@ -89,9 +87,7 @@
       </section>
 
       <section class="search-hotel">
-        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-
-        <p class="search-hotel__text search-hotel__text--big">Заинтересовались?</p>
+        <h2 class="search-hotel__header">Заинтересовались?</h2>
         <p class="search-hotel__text">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие предложения гостиниц в Седоне</p>
 
         <!-- в форме используется изображение календаря img/svg/calendar.svg -->
