--- a/index.html
+++ b/index.html
@@ -24,20 +24,11 @@
     </header>
 
     <main class="page-main">
-      <section class="banner">
-        <h1 class="visually-hidden">Городок Седона - место впечатлений</h1>
-        <div class="banner__foto"></div>
-        <div class="banner__intro"></div>
-        <div class="banner__mask"></div>
-
-        <!-- фоновое изображение  img/index-bg.jpg -->
-        <!-- маска для фона img/svg/intro-mask.svg -->
-        <!-- приветствие на фоне img/svg/intro-welcome.svg -->
-      </section>
-
       <section class="features">
-        <h2 class="features__header">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="features__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <div class="features__title">
+          <h1 class="features__header">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <p class="features__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        </div>
 
         <ol class="features__list">
           <li class="features__item">
