--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header page-header--catalog">
       <a class="page-header__logo-link" href="index.html">
         <img class="page-header__logo" src="img/svg/logo-sedona.svg" width="140" height="71" alt="Логотип Седона"> <!-- логотип Седона img/svg/logo-sedona.svg -->
       </a>
@@ -27,7 +27,6 @@
       <h1 class="visually-hidden">Гостиницы городка Седона</h1>
 
       <section class="filter-hotel">
-        <!-- фоновое изображение img/catalog-bg.jpg -->
         <h2 class="visually-hidden" tabindex="0"  >Подбор гостиниц по критериям</h2>
 
         <form class="form-filter" action="https://echo.htmlacademy.ru/" method="GET" tabindex="0" aria-label="фильтр гостиниц">
