--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header page-header--index">
       <a class="page-header__logo-link" href="index.html">
         <img class="page-header__logo" src="img/svg/logo-sedona.svg" width="140" height="71" alt="Логотип Седона"> <!-- логотип Седона img/svg/logo-sedona.svg -->
       </a>
@@ -32,9 +32,11 @@
 
         <ol class="features__list">
           <li class="features__item">
-            <h3 class="features__subheader">Настоящий городок</h3>
-            <span class="features__number">№1</span>
-            <p class="features__description" tabindex="0">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+            <div class="features__content">
+              <h3 class="features__subheader">Настоящий городок</h3>
+              <span class="features__number">№1</span>
+              <p class="features__description" tabindex="0">Седона - не аттракцион для туристов, там&nbsp;течёт своя жизнь</p>
+            </div>
             <img class="features__foto" src="img/feature-1.jpg" width="800" height="256" alt="Фотография городка Седона">
 
             <ul class="promo features__promo">
@@ -54,22 +56,24 @@
           </li>
 
           <li class="features__item">
-            <h3 class="features__subheader">Там есть мост&nbsp;дьявола</h3>
-            <span class="features__number">№2</span>
-            <p class="features__description" tabindex="0">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            <div class="features__content">
+              <h3 class="features__subheader">Там есть мост&nbsp;дьявола</h3>
+              <span class="features__number">№2</span>
+              <p class="features__description" tabindex="0">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            </div>
             <img class="features__foto" src="img/feature-2.jpg" width="800" height="256" alt="Фотография моста дьявола">
           </li>
-          <li class="features__item item">
+          <li class="features__item">
             <h3 class="features__subheader">Небольшая площадь</h3>
             <span class="features__number">№3</span>
             <p class="features__description" tabindex="0">Все достопримечательности находяться очень близко</p>
           </li>
-          <li class="features__item item">
+          <li class="features__item">
             <h3 class="features__subheader">Красивая дорога</h3>
             <span class="features__number">№4</span>
             <p class="features__description" tabindex="0">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="features__item item">
+          <li class="features__item">
             <h3 class="features__subheader">Мало туристов</h3>
             <span class="features__number">№5</span>
             <p class="features__description" tabindex="0">Большинство едет в Гранд Каньон и&nbsp;толпиться там</p>
