--- a/index.html
+++ b/index.html
@@ -30,55 +30,68 @@
           <p class="features__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
 
-        <ol class="features__list">
-          <li class="features__item">
+        <ul class="features__list">
+          <li class="features__item features__item--foto-right">
             <div class="features__content">
               <h3 class="features__subheader">Настоящий городок</h3>
               <span class="features__number">№1</span>
               <p class="features__description" tabindex="0">Седона - не аттракцион для туристов, там&nbsp;течёт своя жизнь</p>
             </div>
-            <img class="features__foto" src="img/feature-1.jpg" width="800" height="256" alt="Фотография городка Седона">
-
-            <ul class="promo features__promo">
-              <li class="promo__item promo__item--house"> <!-- иконка домика img/svg/icon-1.svg -->
-                <h4 class="promo__header">Жильё</h4>
-                <p class="promo__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-              </li>
-              <li class="promo__item promo__item--food"> <!-- иконка еды img/svg/icon-3.svg -->
-                <h4 class="promo__header">Еда</h4>
-                <p class="promo__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-              <li class="promo__item promo__item--gift"> <!-- иконка сувениров img/svg/icon-2.svg -->
-                <h4 class="promo__header">Сувениры</h4>
-                <p class="promo__text">Не только китайского, но и местного производства!</p>
-              </li>
-            </ul>
+            <div class="features__foto">
+              <img class="foto-right" src="img/feature-1.jpg" width="800" height="256" alt="Фотография городка Седона">
+            </div>
           </li>
 
           <li class="features__item">
+            <div class="features__content promo promo--house">
+              <h4 class="promo__header">Жильё</h4>
+              <p class="promo__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
+          </li>
+
+          <li class="features__item">
+            <div class="features__content promo promo--food">
+              <h4 class="promo__header">Еда</h4>
+              <p class="promo__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </div>
+          </li>
+
+          <li class="features__item">
+            <div class="features__content promo promo--gift">
+              <h4 class="promo__header">Сувениры</h4>
+              <p class="promo__text">Не только китайского, но и местного производства!</p>
+            </div>
+          </li>
+
+          <li class="features__item  features__item--foto-left">
             <div class="features__content">
               <h3 class="features__subheader">Там есть мост&nbsp;дьявола</h3>
               <span class="features__number">№2</span>
               <p class="features__description" tabindex="0">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
-            <img class="features__foto" src="img/feature-2.jpg" width="800" height="256" alt="Фотография моста дьявола">
+            <div class="features__foto">
+              <img class="foto-left" src="img/feature-2.jpg" width="800" height="256" alt="Фотография моста дьявола">
+            </div>
           </li>
-          <li class="features__item">
-            <h3 class="features__subheader">Небольшая площадь</h3>
-            <span class="features__number">№3</span>
-            <p class="features__description" tabindex="0">Все достопримечательности находяться очень близко</p>
+
+          <li class="features__item more">
+              <h3 class="features__subheader">Небольшая площадь</h3>
+              <span class="features__number">№3</span>
+              <p class="features__description" tabindex="0">Все достопримечательности находяться очень близко</p>
           </li>
-          <li class="features__item">
+
+          <li class="features__item more">
             <h3 class="features__subheader">Красивая дорога</h3>
             <span class="features__number">№4</span>
             <p class="features__description" tabindex="0">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="features__item">
+
+          <li class="features__item more">
             <h3 class="features__subheader">Мало туристов</h3>
             <span class="features__number">№5</span>
             <p class="features__description" tabindex="0">Большинство едет в Гранд Каньон и&nbsp;толпиться там</p>
           </li>
-        </ol>
+        </ul>
       </section>
 
       <section class="search-hotel">
